--- a/static/stylesheet/dashboard/dashboard_folder_structure.css
+++ b/static/stylesheet/dashboard/dashboard_folder_structure.css
@@ -28,7 +28,7 @@
     background-color: white;
     border-radius: 10px;
     height: 55vh;
-    
+    overflow-y: auto;
 }
 
 #folder-structure-templates {
@@ -44,4 +44,22 @@
 
 #folder-structure-content {
     flex-grow: 10;
+}
+
+.structure-folder-div {
+    margin-left: 1vw;
+    border-left: thick solid rgba(138, 138, 138, 25);
+    padding-left: 1vw;
+}
+
+.structure-folder-div img {
+    width: 2vw;
+    height: 2vw;
+    margin-right: 1vw;
+    padding-left: 0.9vw;
+    padding-top: 2vh;
+}
+
+.structure-folder-div h3{
+    display: inline;    
 }
