--- a/static/stylesheet/dashboard/dashboard_folder_structure.css
+++ b/static/stylesheet/dashboard/dashboard_folder_structure.css
@@ -49,10 +49,20 @@
 .structure-folder-div {
     margin-left: 1vw;
     border-left: thick solid rgba(138, 138, 138, 25);
-    padding-left: 1vw;
 }
 
-.structure-folder-div img {
+.structure-folder-div-inner {
+    border-bottom: thin solid rgba(138, 138, 138, 25);
+}
+
+.structure-folder-div-inner button {
+    float: right;
+    margin-top: 1.3vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+
+.structure-folder-div-inner img {
     width: 2vw;
     height: 2vw;
     margin-right: 1vw;
@@ -60,6 +70,6 @@
     padding-top: 2vh;
 }
 
-.structure-folder-div h3{
+.structure-folder-div-inner h3{
     display: inline;    
 }
